# cram-soc

./: .gitignore  .gitmodules  MX66UM1G45G.v  README.adoc  README.md  append_csr.py  artybuild.ps1  axi_adapter.py  axi_axil_adapter.py  axi_crossbar.py  axi_ram.py  axil_ahb_adapter.py  axil_crossbar.py  betrusted-soc.py  betrusted_soc.py  boot_test.py  cdc.py  check-timing.sh  codezoom.py  cram_arty.py  cram_common.py  cram_core.py  cram_fpga.py  cram_soc.py  cran_soc.py  daric_to_svd.py  digilent_arty.py  disasm_load.sh  duart_adapter.py  dut.py  gen_keyrom.py  key2bits.py  lxbuildenv.py  mbox_client.py  mkimage.py  pio_adapter.py  pio_to_svd.py  rng_helper.sh  sce_to_svd.py  top_tb.v  (+5 more)
VexRiscv/: GenCramSoC.scala  VexRiscv_CramSoC.v  VexRiscv_CramSoC.yaml  build.sh
VexRiscv/src/: GenCramSoC.scala  VexRiscv_CramSoC.v
boot/: .gitignore  Cargo.toml  README.md  boot.lst  build.sh  daric.sh
boot/betrusted-boot/: Cargo.toml  assemble.ps1  build.rs  link.x  link.x.remap  link.x.straight
boot/betrusted-boot/.cargo/: config
boot/betrusted-boot/src/: apb_check.rs  asm.S  asm.rs  daric_generated.rs  debug.rs  duart.rs  exception.rs  irqs.rs  main.rs  pio.rs  pio_generated.rs  satp.rs
boot/betrusted-boot/src/pio_tests/: adder.rs  i2c.rs  mod.rs  nec.rs  spi.rs  units.rs
boot/sha2/: Cargo.toml
boot/sha2/src/: lib.rs
boot/svd2utra/src/: generate.rs  lib.rs
boot/utralib/: Cargo.toml  build.rs
boot/xtask/src/: main.rs
candidate/: README.md  VexRiscv_CramSoC.v  VexRiscv_CranSoC.v  axi2ahb_wr_fifo.v  axi_adapter_rd.v  axi_adapter_wr.v  axi_crossbar_rd.v  axi_crossbar_wr.v  cdc_blinded.v  cdc_level_to_pulse.sv  core.svd  cram_axi.v  mbox_client.v  mbox_v0.1.sv  memory_AesPlugin_rom_storage_Rom_1rs.v  priority_encoder.v  ram_1w_1rs.v  soc.svd  stage.sh  sync_docs.sh
candidate/bio/: README-DMA.md  README.md  bio_bdma.sv  bio_bdma_wrapper.sv  bio_wrapper.sv  picorv32.v  pio_divider.v  ram_1w_4rs.sv
candidate/docs/: coreuser.html  cpu.html  csrtest.html  d11ctime.html  genindex.html  index.html  interrupts.html  irqarray.html  irqarray0.html  irqarray1.html  irqarray10.html  irqarray11.html  irqarray12.html  irqarray13.html  irqarray14.html  irqarray15.html  irqarray16.html  irqarray17.html  irqarray18.html  irqarray19.html  irqarray2.html  irqarray3.html  irqarray4.html  irqarray5.html  irqarray6.html  irqarray7.html  irqarray8.html  irqarray9.html  mailbox.html  mb_client.html  objects.inv  resetvalue.html  search.html  searchindex.js  susres.html  ticktimer.html
candidate/libs/: VexRiscv_CramSoC.v  arbiter.v  axi_axil_adapter_rd.v  axi_axil_adapter_wr.v  axi_ram.v  mbox_client.v  memory_AesZknPlugin_rom_storage_Rom_1rs.v  ram_1w_1ra.v  ram_1w_1rs.v
candidate/pio/: decoder.v  divider.v  fifo.v  isr.v  machine.v  osr.v  pc.v  pio_ahb.sv  pio_apb.sv  pio_decoder.v  pio_fifo.v  pio_isr.v  pio_machine.v  pio_osr.v  pio_pc.v  pio_scratch.v  rp_pio.sv  scratch.v
codegen/: README.md  daric_to_svd.py  pio_to_svd.py  sce_to_svd.py
fw/: Cargo.toml  buildpush.sh  loadec.sh  memory.x  rebuild-pac.sh
fw/betrusted-hal/: Cargo.toml
fw/jtag/: Cargo.toml
fw/src/: aes_test.rs  main.rs
gateware/: i2s.py  sha2_litex.sv  spinor.py
gateware/trng/: ring_osc.py
include/: daric.h  daric.svd  daric_generated.rs  pio.svd  pio_generated.rs  sce.h  sce.svd  sce_generated.rs
include/daric_doc/: aes.rst  apb_thru.rst  combohash.rst  conf.py  duart.rst  evc.rst  gluechain.rst  index.rst  iox.rst  mbox_apb.rst  mdma.rst  mesh.rst  pke.rst  pl230.rst  pl230_placeholder.rst  pwm.rst  qfc.rst  rp_pio.rst  sce_glbsfr.rst  scedma.rst  sddc.rst  sysctrl.rst  trng.rst  udma_adc.rst  udma_camera_0.rst  udma_camera_1.rst  udma_camera_2.rst  udma_camera_3.rst  udma_camera_6.rst  udma_ctrl.rst  udma_filter.rst  udma_filter_0.rst  udma_filter_2.rst  udma_filter_3.rst  udma_i2c_1.rst  udma_i2c_2.rst  udma_i2c_5.rst  udma_i2c_6.rst  udma_i2s.rst  udma_i2s_4.rst  (+25 more)
include/doc/: aes.rst  combohash.rst  conf.py  index.rst  pio.rst  pio_wrap.rst  pke.rst  scedma.rst  trng.rst
include/pio_doc/: conf.py  index.rst  rp_pio.rst
loader/: loader.S
reference/: burn.sh
sim/bios/: Makefile  main.c
sim_support/: FDPE.v  bio_tb.v  cdc_blinded.v  cdc_pulse.v  fdre_cosim.v  finisher.v  mbox_client.v  mbox_v0.1.sv  mbox_wrapper.sv  prims.v  ram_1w_1rs.v  sim_bench.py  uart_print.v
soc-oss/: axi_crossbar.py  axil_cdc.py  mbox_adapter.py  mbox_client.py  pio_adapter.py
soc_oss/: ahb_axi_adapter.py  ahb_to_axi4.sv  apb.py  axi_adapter.py  axi_axil_adapter.py  axi_crossbar.py  axi_ram.py  axil_ahb_adapter.py  axil_cdc.py  axil_crossbar.py  axil_ram.py  bio_adapter.py  bio_bdma_adapter.py  duart_adapter.py  duart_top.sv  mbox_adapter.py  mbox_client.py  pio_adapter.py  regfifo.py  tb.py
svd2utra/: Cargo.toml
sw/: buildpush.sh  memory.x  rust-rom.sh
xous/: build-xous.sh  rebuild-pac.sh  xous-pac.sh
(+420 files in other folders)
