[workspace]
default-members = [
  "betrusted-boot",
]
members = [
  "svd2utra",
  "xtask",
  "betrusted-boot",
]
resolver = "2"

[profile.release]
codegen-units = 1 # 1 better optimizations
debug = false
lto = "fat"
opt-level = 'z'  # Optimize for size instead of performance
#panic = "abort" # Remove panic output, which can reduce file size

# prefer hardware-accelerated versions of services
sha2 = {path = "./engine-sha512", package = "engine-sha512"}
