[workspace]
default-members = [
  "betrusted-boot",
]
members = [
  "xtask",
  "betrusted-boot",
]
resolver = "2"

[patch.crates-io.utralib]
path = "./utralib"

[profile.release]
codegen-units = 1 # 1 better optimizations
debug = true
lto = "fat"
opt-level = 1   # 's' = Optimize for size instead of performance
panic = "abort" # Remove panic output, which can reduce file size
strip = false