[package]
name = "betrusted-boot"
version = "0.1.0"
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"

[dependencies]
utralib = {path = "../utralib"}
riscv = { version = "0.5.6", package = "xous-riscv" }
xous-pio = {path="../../../xous-cramium/libs/xous-pio", optional=true, default-features=false, features=["tests", "cramium-soc"]}

[features]
debug-print = []
small-soc = []
daric = []
pio-test = ["xous-pio"]
# default = ["debug-print", "small-soc"]
sim = []
default = ["sim", "daric"]

[target.'cfg(not(any(windows, unix)))'.dependencies]
utralib = { path = "../utralib"}
